trouble shooting deploy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employeedirectory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://codehawkeye.github.io/Employee-Directory",
+  "homepage": "https://codehawkeye.github.io/employee-directory",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
