--- a/employee/package.json
+++ b/employee/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "employee-directory",
+  "name": "employee",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://codehawkeye.github.io/employee-directory",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "gh-pages": "^3.1.0",
+    "@testing-library/user-event": "^12.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
