--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employee-directory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://codehawkeye.github.io/employee-directory",
+  "homepage": "https://codehawkeye.github.io/Employee-Directory",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -21,6 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "clean": "gh-pages-clean",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
